--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,14 @@
                 android:id="@+id/opening"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:baselineAligned="false"
-                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="horizontal"
+                android:paddingTop="8dp"
+                android:paddingEnd="2dp"
+                android:paddingBottom="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <!-- Gambar di sebelah kiri -->
                 <ImageView
@@ -58,9 +61,9 @@
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1"
+                    android:contentDescription="@string/vintage_image_description"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/vintage"
-                    android:contentDescription="@string/vintage_image_description" />
+                    android:src="@drawable/vintage" />
 
                 <!-- Card "Laporkan Bullying" di sebelah kanan -->
                 <androidx.cardview.widget.CardView
