--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tosca_mandu_light"
-    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
+    <!-- AppBarLayout diberi warna latar belakang tosca_mandu -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:background="@color/tosca_mandu">
 
+        <!-- Toolbar dibuat transparan agar warna AppBarLayout yang terlihat -->
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
+            android:background="@android:color/transparent">
 
             <include layout="@layout/header_logo_layout" />
 
